--- a/css/sassquatch.css
+++ b/css/sassquatch.css
@@ -14,17 +14,18 @@ parent: functions
 */
 /*doc
 ---
-title: capitalizeFirstLetter
-name: capitalizeFirstLetter
+title: str-capitalizeFirstLetter
+name: str-capitalizeFirstLetter
 parent: string
 ---
 Capitalizes first letter of a given string. Useful as a camelCase converter.
-__returns string__
+
+_returns string_
 
 ```
-capitalizeFirstLetter('snowflake') // -> 'Snowflake'
+str-capitalizeFirstLetter('snowflake') // -> 'Snowflake'
 
-.specialcapitalizeFirstLetter("snowflake") // -> .specialSnowflake
+.specialstr-capitalizeFirstLetter("snowflake") // -> .specialSnowflake
 ```
 */
 /*doc
@@ -33,12 +34,14 @@ title: str-replace
 name: str-replace
 parent: string
 ---
+Search and replace on strings.
 
-__returns string__
-
+_returns string_
 
 ```
-str-replace('snow_flake', '_', '-') // -> 'snow-flake'
+str-replace('inline-block', '-', '') // -> 'inlineblock'
+
+.display--str-replace("inline-block", "-block", "Block") -> .display--inlineBlock
 ```
 */
 /*doc
@@ -57,7 +60,9 @@ parent: brightness
 Gets brightness of a color on a scale of 0-255 based on a yiq color space.
 _Calculates green-weighted sum of RGB channels (green is perceived as brighter
 on additive color screens)._
-__returns int__
+
+_returns int_
+
 ```
 getPerceivedBrightness(#000) // -> 0
 ```
@@ -70,7 +75,9 @@ parent: brightness
 ---
 Checks a given color for brightness and returns a boolean.
 Our default dark/light threshold is 160 on a scale of 0-255
-__returns boolean__
+
+_returns boolean_
+
 ```
 isDark(#000) // -> true
 isLight(#000) // -> false
@@ -84,7 +91,8 @@ parent: brightness
 ---
 For a given background color, this function returns
 a text color value with appropriate contrast.
-__returns value__
+
+_returns `color` value_
 
 ```
 // -> color: $C_textPrimaryInverted; (white text on dark)
@@ -426,8 +434,7 @@ Aligns children of selected element using flexbox.
 @extend %valignChildren--bottom;
 ```
 */
-.collection-header,
-.chunkList-chunk:only-child {
+.collection-header {
   display: -webkit-box;
   display: -moz-box;
   display: box;
@@ -872,6 +879,26 @@ Breakpoint name        | Description
 `atMediaDown(medium)`  | Landscape on most phones and under; portrait on some phablets
 `atMediaDown(large)`   | Landscape on phabelts and under; portrait on most tablets or old desktops
 `atMediaDown(huge)`    | Huge screens and under
+
+
+### Targeting a specific breakpoint
+It will be rare that we target a specific breakpoint, but
+the `atMediaOnly` mixin will do this.
+
+```scss
+	@include atMediaOnly(medium) {
+		body::after {
+			content: "only medium screens will see this";
+		}
+	}
+```
+
+Breakpoint name        | Description
+-----------------------| ---------------------------------------------
+`atMediaOnly(small)`   | Small screens only
+`atMediaOnly(medium)`  | Landscape on most phones only
+`atMediaOnly(large)`   | Landscape on phabelts only
+`atMediaOnly(huge)`    | Huge screens only
 */
 /*doc
 ---
@@ -1418,57 +1445,17 @@ Display text for header hero elements.
       .collection-header .collection-header-actions a:last-child {
         padding-right: 0; }
 
-.chunkList {
+.list {
   padding: 0;
   margin: 0;
   list-style: none; }
-  .chunkList .timestamp {
-    float: right; }
-  .chunkList .item-label {
-    font-weight: 700;
-    display: inline-block; }
-  .chunkList > li {
+  .list > li {
     margin: 0;
-    border-top: 1px solid rgba(0, 0, 0, 0.12); }
-    .chunkList--borderless .chunkList > li {
-      border-top: 0;
-      margin-top: 24px; }
-    .chunkList > li:first-child {
-      border-top: none; }
-
-.chunkList--borderless > li {
-  border-top: 0;
-  margin-top: 24px; }
-
-.chunkList-chunk {
-  height: 72px;
-  vertical-align: middle;
-  padding: 8px 0 8px 8px;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box; }
-  .chunkList-chunk:first-child {
-    padding-left: 0; }
-  .chunkList--small .chunkList-chunk {
-    height: 48px; }
-  .chunkList--large .chunkList-chunk, .chunkList-row--large .chunkList-chunk {
-    vertical-align: top !important; }
-
-.chunkList-chunk--graphic {
-  line-height: 100%;
-  min-width: 36px;
-  max-width: 36px; }
-
-.chunkList-chunk--action {
-  text-align: right;
-  white-space: nowrap; }
-  .chunkList-chunk--action input.checkbox,
-  .chunkList-chunk--action input.radio {
-    margin-right: 2px; }
-  .chunkList-chunk--action a {
-    padding: 0 8px; }
-    .chunkList-chunk--action a:last-child {
-      padding-right: 0; }
+    border-top: 1px solid rgba(0, 0, 0, 0.12);
+    padding-top: 16px; }
+    .list > li:first-child {
+      border-top: none;
+      padding-top: 0; }
 
 .gridList {
   margin: 0 -8px 0 0;
@@ -1572,7 +1559,7 @@ Display text for header hero elements.
   .tileGrid--photos .tileGrid-tile {
     padding: 0 8px 8px 0; } }
 .inlineblockList {
-  margin: 8px 0;
+  margin: 0;
   padding: 0; }
   .inlineblockList > li {
     display: inline-block;
@@ -3364,7 +3351,7 @@ Class                   | Description
 .display--inline {
   display: inline !important; }
 
-.display--inlineblock {
+.display--inlineBlock {
   display: inline-block !important; }
 
 /*doc
@@ -3387,97 +3374,275 @@ TK `.clearfix`
 
 /*doc
 ---
-title: Media conditional modifiers
+title: Media-conditional modifiers
 name: mediaMod
 category: Modifiers
 ---
-TK
 
-Class                   | Description
------------------------ | --------------------------------
-TK                      | TK
+Media-conditional modifiers allow us to apply
+a modification at a specific breakpoint.
 
+Uses `atMediaUp`
+
+TODO: consider `atMediaOnly`
+
+#### Signature
+
+`.[property]--[modification]--[breakpoint][Up|Down|Small]`
+
+ie. `.align--center--mOnly` applies center text alignment at the small breakpoint only
+
+#### Supported media and modifications
+_Better documentation for this TK_
+
+- `.align--[ center | right | left ]--[ small | medium | large ][ Up | Down | Only ]`
+- `.display--[ none | inline | inlineBlock | block ]--[ small | medium | large ][ Up | Down | Only ]`
+- `.border--[ none | top ]--[ small | medium | large ][ Up | Down | Only ]`
+
+Example TK
 */
-@media only screen and (min-width: 960px) {
-  .align--center--atLarge {
+@media only screen and (min-width: 440px) {
+  .align--center--smallUp {
+    text-align: center !important; } }
+@media only screen and (max-width: 440px) {
+  .align--center--smallDown {
+    text-align: center !important; } }
+@media only screen and (min-width: 440px) and (max-width: 440px) {
+  .align--center--smallOnly {
+    text-align: center !important; } }
+@media only screen and (min-width: 640px) {
+  .align--center--mediumUp {
+    text-align: center !important; } }
+@media only screen and (max-width: 640px) {
+  .align--center--mediumDown {
+    text-align: center !important; } }
+@media only screen and (min-width: 640px) and (max-width: 640px) {
+  .align--center--mediumOnly {
     text-align: center !important; } }
 @media only screen and (min-width: 960px) {
-  .align--right--atLarge {
+  .align--center--largeUp {
+    text-align: center !important; } }
+@media only screen and (max-width: 960px) {
+  .align--center--largeDown {
+    text-align: center !important; } }
+@media only screen and (min-width: 960px) and (max-width: 960px) {
+  .align--center--largeOnly {
+    text-align: center !important; } }
+@media only screen and (min-width: 440px) {
+  .align--right--smallUp {
+    text-align: right !important; } }
+@media only screen and (max-width: 440px) {
+  .align--right--smallDown {
+    text-align: right !important; } }
+@media only screen and (min-width: 440px) and (max-width: 440px) {
+  .align--right--smallOnly {
+    text-align: right !important; } }
+@media only screen and (min-width: 640px) {
+  .align--right--mediumUp {
+    text-align: right !important; } }
+@media only screen and (max-width: 640px) {
+  .align--right--mediumDown {
+    text-align: right !important; } }
+@media only screen and (min-width: 640px) and (max-width: 640px) {
+  .align--right--mediumOnly {
     text-align: right !important; } }
 @media only screen and (min-width: 960px) {
-  .align--left--atLarge {
+  .align--right--largeUp {
+    text-align: right !important; } }
+@media only screen and (max-width: 960px) {
+  .align--right--largeDown {
+    text-align: right !important; } }
+@media only screen and (min-width: 960px) and (max-width: 960px) {
+  .align--right--largeOnly {
+    text-align: right !important; } }
+@media only screen and (min-width: 440px) {
+  .align--left--smallUp {
+    text-align: left !important; } }
+@media only screen and (max-width: 440px) {
+  .align--left--smallDown {
+    text-align: left !important; } }
+@media only screen and (min-width: 440px) and (max-width: 440px) {
+  .align--left--smallOnly {
+    text-align: left !important; } }
+@media only screen and (min-width: 640px) {
+  .align--left--mediumUp {
+    text-align: left !important; } }
+@media only screen and (max-width: 640px) {
+  .align--left--mediumDown {
+    text-align: left !important; } }
+@media only screen and (min-width: 640px) and (max-width: 640px) {
+  .align--left--mediumOnly {
     text-align: left !important; } }
 @media only screen and (min-width: 960px) {
-  .display--none--atLarge {
+  .align--left--largeUp {
+    text-align: left !important; } }
+@media only screen and (max-width: 960px) {
+  .align--left--largeDown {
+    text-align: left !important; } }
+@media only screen and (min-width: 960px) and (max-width: 960px) {
+  .align--left--largeOnly {
+    text-align: left !important; } }
+@media only screen and (min-width: 440px) {
+  .display--none--smallUp {
+    display: none !important; } }
+@media only screen and (max-width: 440px) {
+  .display--none--smallDown {
+    display: none !important; } }
+@media only screen and (min-width: 440px) and (max-width: 440px) {
+  .display--none--smallOnly {
+    display: none !important; } }
+@media only screen and (min-width: 640px) {
+  .display--none--mediumUp {
+    display: none !important; } }
+@media only screen and (max-width: 640px) {
+  .display--none--mediumDown {
+    display: none !important; } }
+@media only screen and (min-width: 640px) and (max-width: 640px) {
+  .display--none--mediumOnly {
     display: none !important; } }
 @media only screen and (min-width: 960px) {
-  .display--block--atLarge {
+  .display--none--largeUp {
+    display: none !important; } }
+@media only screen and (max-width: 960px) {
+  .display--none--largeDown {
+    display: none !important; } }
+@media only screen and (min-width: 960px) and (max-width: 960px) {
+  .display--none--largeOnly {
+    display: none !important; } }
+@media only screen and (min-width: 440px) {
+  .display--block--smallUp {
+    display: block !important; } }
+@media only screen and (max-width: 440px) {
+  .display--block--smallDown {
+    display: block !important; } }
+@media only screen and (min-width: 440px) and (max-width: 440px) {
+  .display--block--smallOnly {
+    display: block !important; } }
+@media only screen and (min-width: 640px) {
+  .display--block--mediumUp {
+    display: block !important; } }
+@media only screen and (max-width: 640px) {
+  .display--block--mediumDown {
+    display: block !important; } }
+@media only screen and (min-width: 640px) and (max-width: 640px) {
+  .display--block--mediumOnly {
     display: block !important; } }
 @media only screen and (min-width: 960px) {
-  .display--inline--atLarge {
+  .display--block--largeUp {
+    display: block !important; } }
+@media only screen and (max-width: 960px) {
+  .display--block--largeDown {
+    display: block !important; } }
+@media only screen and (min-width: 960px) and (max-width: 960px) {
+  .display--block--largeOnly {
+    display: block !important; } }
+@media only screen and (min-width: 440px) {
+  .display--inline--smallUp {
+    display: inline !important; } }
+@media only screen and (max-width: 440px) {
+  .display--inline--smallDown {
+    display: inline !important; } }
+@media only screen and (min-width: 440px) and (max-width: 440px) {
+  .display--inline--smallOnly {
+    display: inline !important; } }
+@media only screen and (min-width: 640px) {
+  .display--inline--mediumUp {
+    display: inline !important; } }
+@media only screen and (max-width: 640px) {
+  .display--inline--mediumDown {
+    display: inline !important; } }
+@media only screen and (min-width: 640px) and (max-width: 640px) {
+  .display--inline--mediumOnly {
     display: inline !important; } }
 @media only screen and (min-width: 960px) {
-  .display--inlineblock--atLarge {
+  .display--inline--largeUp {
+    display: inline !important; } }
+@media only screen and (max-width: 960px) {
+  .display--inline--largeDown {
+    display: inline !important; } }
+@media only screen and (min-width: 960px) and (max-width: 960px) {
+  .display--inline--largeOnly {
+    display: inline !important; } }
+@media only screen and (min-width: 440px) {
+  .display--inlineBlock--smallUp {
+    display: inline-block !important; } }
+@media only screen and (max-width: 440px) {
+  .display--inlineBlock--smallDown {
+    display: inline-block !important; } }
+@media only screen and (min-width: 440px) and (max-width: 440px) {
+  .display--inlineBlock--smallOnly {
+    display: inline-block !important; } }
+@media only screen and (min-width: 640px) {
+  .display--inlineBlock--mediumUp {
+    display: inline-block !important; } }
+@media only screen and (max-width: 640px) {
+  .display--inlineBlock--mediumDown {
+    display: inline-block !important; } }
+@media only screen and (min-width: 640px) and (max-width: 640px) {
+  .display--inlineBlock--mediumOnly {
     display: inline-block !important; } }
 @media only screen and (min-width: 960px) {
-  .border--top--atLarge {
+  .display--inlineBlock--largeUp {
+    display: inline-block !important; } }
+@media only screen and (max-width: 960px) {
+  .display--inlineBlock--largeDown {
+    display: inline-block !important; } }
+@media only screen and (min-width: 960px) and (max-width: 960px) {
+  .display--inlineBlock--largeOnly {
+    display: inline-block !important; } }
+@media only screen and (min-width: 440px) {
+  .border--top--smallUp {
+    border-top: 1px solid rgba(0, 0, 0, 0.12) !important; } }
+@media only screen and (max-width: 440px) {
+  .border--top--smallDown {
+    border-top: 1px solid rgba(0, 0, 0, 0.12) !important; } }
+@media only screen and (min-width: 440px) and (max-width: 440px) {
+  .border--top--smallOnly {
+    border-top: 1px solid rgba(0, 0, 0, 0.12) !important; } }
+@media only screen and (min-width: 640px) {
+  .border--top--mediumUp {
+    border-top: 1px solid rgba(0, 0, 0, 0.12) !important; } }
+@media only screen and (max-width: 640px) {
+  .border--top--mediumDown {
+    border-top: 1px solid rgba(0, 0, 0, 0.12) !important; } }
+@media only screen and (min-width: 640px) and (max-width: 640px) {
+  .border--top--mediumOnly {
     border-top: 1px solid rgba(0, 0, 0, 0.12) !important; } }
 @media only screen and (min-width: 960px) {
-  .border--none--atLarge {
+  .border--top--largeUp {
+    border-top: 1px solid rgba(0, 0, 0, 0.12) !important; } }
+@media only screen and (max-width: 960px) {
+  .border--top--largeDown {
+    border-top: 1px solid rgba(0, 0, 0, 0.12) !important; } }
+@media only screen and (min-width: 960px) and (max-width: 960px) {
+  .border--top--largeOnly {
+    border-top: 1px solid rgba(0, 0, 0, 0.12) !important; } }
+@media only screen and (min-width: 440px) {
+  .border--none--smallUp {
+    border-width: 0 !important; } }
+@media only screen and (max-width: 440px) {
+  .border--none--smallDown {
+    border-width: 0 !important; } }
+@media only screen and (min-width: 440px) and (max-width: 440px) {
+  .border--none--smallOnly {
     border-width: 0 !important; } }
 @media only screen and (min-width: 640px) {
-  .align--center--atMedium {
-    text-align: center !important; } }
-@media only screen and (min-width: 640px) {
-  .align--right--atMedium {
-    text-align: right !important; } }
-@media only screen and (min-width: 640px) {
-  .align--left--atMedium {
-    text-align: left !important; } }
-@media only screen and (min-width: 640px) {
-  .display--none--atMedium {
-    display: none !important; } }
-@media only screen and (min-width: 640px) {
-  .display--block--atMedium {
-    display: block !important; } }
-@media only screen and (min-width: 640px) {
-  .display--inline--atMedium {
-    display: inline !important; } }
-@media only screen and (min-width: 640px) {
-  .display--inlineblock--atMedium {
-    display: inline-block !important; } }
-@media only screen and (min-width: 640px) {
-  .border--top--atMedium {
-    border-top: 1px solid rgba(0, 0, 0, 0.12) !important; } }
-@media only screen and (min-width: 640px) {
-  .border--none--atMedium {
+  .border--none--mediumUp {
     border-width: 0 !important; } }
-@media only screen and (min-width: 440px) {
-  .align--center--atSmall {
-    text-align: center !important; } }
-@media only screen and (min-width: 440px) {
-  .align--right--atSmall {
-    text-align: right !important; } }
-@media only screen and (min-width: 440px) {
-  .align--left--atSmall {
-    text-align: left !important; } }
-@media only screen and (min-width: 440px) {
-  .display--none--atSmall {
-    display: none !important; } }
-@media only screen and (min-width: 440px) {
-  .display--block--atSmall {
-    display: block !important; } }
-@media only screen and (min-width: 440px) {
-  .display--inline--atSmall {
-    display: inline !important; } }
-@media only screen and (min-width: 440px) {
-  .display--inlineblock--atSmall {
-    display: inline-block !important; } }
-@media only screen and (min-width: 440px) {
-  .border--top--atSmall {
-    border-top: 1px solid rgba(0, 0, 0, 0.12) !important; } }
-@media only screen and (min-width: 440px) {
-  .border--none--atSmall {
+@media only screen and (max-width: 640px) {
+  .border--none--mediumDown {
+    border-width: 0 !important; } }
+@media only screen and (min-width: 640px) and (max-width: 640px) {
+  .border--none--mediumOnly {
+    border-width: 0 !important; } }
+@media only screen and (min-width: 960px) {
+  .border--none--largeUp {
+    border-width: 0 !important; } }
+@media only screen and (max-width: 960px) {
+  .border--none--largeDown {
+    border-width: 0 !important; } }
+@media only screen and (min-width: 960px) and (max-width: 960px) {
+  .border--none--largeOnly {
     border-width: 0 !important; } }
 /*doc
 ---
