--- a/css/sassquatch.css
+++ b/css/sassquatch.css
@@ -595,8 +595,7 @@ _[ie. avatars][avatar]_
 ```
 */
 .avatar--person,
-.avatar, .photo-card--photo,
-.photoCard--photo, .imgFill {
+.avatar, .photoCard, .imgFill {
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -1753,18 +1752,19 @@ a margin-bottom.
 
 /*doc
 ---
-title: Flex row
+title: Flex Row
 name: flexRow
 parent: layout
 ---
 Arranges content in rows using `display: flex`.
 
-The `.flexRow` class is applied to a wrapping element.
+The `.row` class is applied to a wrapping element.
 
-Direct children of `.flexRow` are flex children, and require
-either a `.flexRow-item--grow` or `.flexRow-item--shirnk` class.
+Direct children of `.row` are flex children, and require
+a class of `.row-item` with an optional `.row-item--shirnk`
+for a flex-shrink item.
 
-The flex children in flexRow do not have a `flex-basis` set; a
+The flex children in flex row do not have a `flex-basis` set; a
 basis is not required for most common layout tasks.
 
 _Includes `table-cell` fallback for IE8._
@@ -1772,40 +1772,40 @@ _Includes `table-cell` fallback for IE8._
 #### Examples:
 
 ```html_example
-<div class="flexRow">
-	<div class="_DOC-SHADE flexRow-item--grow">Item 1</div>
-	<div class="_DOC-SHADE flexRow-item--shrink">Item 2</div>
-	<div class="_DOC-SHADE flexRow-item--shrink">Item 3</div>
-	<div class="_DOC-SHADE flexRow-item--grow">Item 4</div>
+<div class="row">
+	<div class="_DOC-SHADE row-item">Item 1</div>
+	<div class="_DOC-SHADE row-item--shrink">Item 2</div>
+	<div class="_DOC-SHADE row-item--shrink">Item 3</div>
+	<div class="_DOC-SHADE row-item">Item 4</div>
 </div>
 ```
 
 ```html_example
-<div class="flexRow">
-	<div class="_DOC-SHADE flexRow-item--shrink">Item 1</div>
-	<div class="_DOC-SHADE flexRow-item--grow">Item 2</div>
-	<div class="_DOC-SHADE flexRow-item--shrink">Item 3</div>
+<div class="row">
+	<div class="_DOC-SHADE row-item--shrink">Item 1</div>
+	<div class="_DOC-SHADE row-item">Item 2</div>
+	<div class="_DOC-SHADE row-item--shrink">Item 3</div>
 </div>
 ```
 
 ```html_example
-<div class="flexRow flexRow--flexEnd">
-	<div class="_DOC-SHADE flexRow-item--shrink">Item 1</div>
-	<div class="_DOC-SHADE flexRow-item--shrink">Item 2</div>
-	<div class="_DOC-SHADE flexRow-item--shrink">Item 3</div>
+<div class="row row--flexEnd">
+	<div class="_DOC-SHADE row-item--shrink">Item 1</div>
+	<div class="_DOC-SHADE row-item--shrink">Item 2</div>
+	<div class="_DOC-SHADE row-item--shrink">Item 3</div>
 </div>
 ```
 
 ```html_example
-<div class="flexRow flexRow--spaceBetween flexRow--reverse">
-	<div class="_DOC-SHADE flexRow-item--shrink">Item 1</div>
-	<div class="_DOC-SHADE flexRow-item--shrink">Item 2</div>
-	<div class="_DOC-SHADE flexRow-item--shrink">Item 3</div>
-	<div class="_DOC-SHADE flexRow-item--shrink">Item 4</div>
+<div class="row row--spaceBetween row--reverse">
+	<div class="_DOC-SHADE row-item--shrink">Item 1</div>
+	<div class="_DOC-SHADE row-item--shrink">Item 2</div>
+	<div class="_DOC-SHADE row-item--shrink">Item 3</div>
+	<div class="_DOC-SHADE row-item--shrink">Item 4</div>
 </div>
 ```
 */
-.flexRow {
+.row {
   display: -webkit-box;
   display: -moz-box;
   display: box;
@@ -1836,45 +1836,45 @@ _Includes `table-cell` fallback for IE8._
   align-items: flex;
   -ms-flex-align: flex; }
 
-.flexRow-item--shrink, .flexRow-item--grow {
-  padding-left: 16px; }
-  .flexRow-item--shrink:first-child, .flexRow-item--grow:first-child {
+.row-item {
+  padding-left: 16px;
+  -webkit-flex-grow: 1;
+  flex-grow: 1;
+  -ms-flex-positive: 1; }
+  .row-item:first-child {
     padding-left: 0; }
 
-.flexRow-item--shrink {
+.row-item--shirnk {
+  -webkit-flex-grow: 0;
+  flex-grow: 0;
+  -ms-flex-positive: 0;
   -webkit-flex-shrink: 1;
   flex-shrink: 1;
   -ms-flex-negative: 1; }
 
-.flexRow-item--grow {
-  -webkit-flex-grow: 1;
-  flex-grow: 1;
-  -ms-flex-positive: 1; }
-
 /*doc
 ---
-title: flexRow variants
+title: Row variants
 name: flexrowParent
 parent: flexRow
 ---
 
-A class of `.flexRow` is __required__ on the flexRow parent. The
+A class of `.row` is __required__ on the flex row parent. The
 following classes are optional variants:
 
-Class                       | Description
---------------------------- | -------------------------------
-`.flexRow--noGutters`       | removes padding from all `.flexRow-item` children
-`.flexRow--reverse`         | reverses row order
-`.flexRow--flexEnd`         | justifies content to `flex-end`
-`.flexRow--center`          | justifies content to `center`
-`.flexRow--spaceBetween`    | justifies content to `spaceBetween`
-`.flexRow--spaceAround`     | justifies content to `spaceAround`
+Class                   | Description
+----------------------- | -------------------------------
+`.row--noGutters`       | removes padding from all `.row-item` children
+`.row--reverse`         | reverses row order
+`.row--flexEnd`         | justifies content to `flex-end`
+`.row--center`          | justifies content to `center`
+`.row--spaceBetween`    | justifies content to `spaceBetween`
+`.row--spaceAround`     | justifies content to `spaceAround`
 */
-.flexRow--noGutters .flexrow-item--grow,
-.flexRow--noGutters .flexrow-item--shrink {
+.row--noGutters .row-item {
   padding: 0; }
 
-.flexRow--reverse {
+.row--reverse {
   -webkit-box-orient: horizontal;
   box-orient: horizontal;
   -webkit-box-direction: reverse;
@@ -1883,7 +1883,7 @@ Class                       | Description
   flex-direction: row-reverse;
   -ms-flex-direction: row-reverse; }
 
-.flexRow--flexEnd {
+.row--flexEnd {
   -webkit-box-pack: end;
   box-pack: end;
   -webkit-justify-content: flex-end;
@@ -1891,7 +1891,7 @@ Class                       | Description
   justify-content: flex-end;
   -ms-flex-pack: end; }
 
-.flexRow--center {
+.row--center {
   -webkit-box-pack: center;
   box-pack: center;
   -webkit-justify-content: center;
@@ -1899,7 +1899,7 @@ Class                       | Description
   justify-content: center;
   -ms-flex-pack: center; }
 
-.flexRow--spaceBetween {
+.row--spaceBetween {
   -webkit-box-pack: justify;
   box-pack: justify;
   -webkit-justify-content: space-between;
@@ -1907,7 +1907,7 @@ Class                       | Description
   justify-content: space-between;
   -ms-flex-pack: justify; }
 
-.flexRow--spaceAround {
+.row--spaceAround {
   -webkit-box-pack: center;
   box-pack: center;
   -webkit-justify-content: space-around;
@@ -1915,19 +1915,19 @@ Class                       | Description
   justify-content: space-around;
   -ms-flex-pack: center; }
 
-.lt--IE9 .flexRow {
+.lt--IE9 .row {
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
   display: table;
   table-layout: auto;
   width: 100%; }
 
-.lt--IE9 .flexRow-item--shrink,
-.lt--IE9 .flexRow-item--grow {
-  display: table-cell; }
-
-.lt--IE9 .flexRow-item--grow {
+.lt--IE9 .row-item {
+  display: table-cell;
   width: 100%; }
+
+.lt--IE9 .row-item--shrink {
+  width: auto; }
 
 /*doc
 ---
@@ -2485,13 +2485,36 @@ Standard display for dates via the
 .dateTime-tearsheet {
   margin-right: 8px; }
 
-.photo-card--photo,
-.photoCard--photo {
+/*doc
+---
+title: Photo Card
+name: photoCard
+category: UI Components
+---
+Cards for groups.
+
+```html_example
+<ul class="row">
+	<li class="row-item">
+		<a href="#" class="photoCard inverted" style="background-image: url(http://photos3.meetupstatic.com/photos/event/1/9/8/7/600_432486535.jpeg);">
+			<h3 class="photoCard--text">20 and 30 somethings in Portland - AWESOME Stuff</h3>
+		</a>
+	</li>
+	<li class="row-item">
+		<a href="#!/groups/57" class="photoCard inverted" style="background-image: url(http://photos2.meetupstatic.com/photos/event/5/a/0/9/600_431723049.jpeg);">
+			<h3 class="photoCard--text">Mazama Trail Trips</h3>
+		</a>
+	</li>
+</ul>
+```
+*/
+.photoCard {
+  display: block;
   position: relative;
   width: 100%;
-  height: 100%; }
-  .photo-card--photo:before,
-  .photoCard--photo:before {
+  height: 100%;
+  min-height: 160px; }
+  .photoCard:before {
     background-color: rgba(15, 20, 31, 0);
     background-image: -webkit-linear-gradient(rgba(15, 20, 31, 0) 0%, rgba(15, 20, 31, 0.1) 50%, rgba(15, 20, 31, 0.8) 100%);
     background-image: linear-gradient(rgba(15, 20, 31, 0) 0%, rgba(15, 20, 31, 0.1) 50%, rgba(15, 20, 31, 0.8) 100%);
@@ -2503,7 +2526,6 @@ Standard display for dates via the
     z-index: 0;
     top: 0; }
 
-.photo-card--text,
 .photoCard--text {
   bottom: 0;
   padding: 16px;
